Correction alignement symbole + propositions mobile

--- a/includes/assets/css/mobile/styleFA.css
+++ b/includes/assets/css/mobile/styleFA.css
@@ -405,7 +405,7 @@
     color: white;
     font-size: 150%;
     text-align: center;
-    line-height: 5vh;
+    line-height: 4.5vh;
 }
 
 .no_proposal
